--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,27 @@
 <head>
   <meta charset="utf-8">
   <title>SeleniumUi</title>
-  <base href="/">
+  <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+
   <app-root></app-root>
+  <script>
+    try {
+      var electron = require("electron");
+    } catch (e) {
+      document.write("Not support run in browser");
+    }
+    try {
+      var webdriver = require("selenium-webdriver");
+      console.log('#____________ssd:', webdriver);
+    } catch (e) {
+      console.log('#____________sde:', e);
+      document.write("Not support run in browser");
+    }
+  </script>
 </body>
 </html>
