#add exe can test add all node.

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,8 @@
     }
     try {
       var webdriver = require("selenium-webdriver");
-      console.log('#____________ssd:', webdriver);
     } catch (e) {
-      console.log('#____________sde:', e);
+      console.log('#____________web driver load error:', e);
       document.write("Not support run in browser");
     }
   </script>
